tests/syntax/bad/testfile-int-1.scala
class A {
    var x = 01;
}
object Main { def main(args: Array[String]) { } }
